# NSU-labs-3-semester

life/: CMakeLists.txt  cell.h  console.cpp  console.h  field.cpp  field.h  flying saucer.lif  glider.lif  main.cpp  oscillator.lif  test.cpp
parser/: CMakeLists.txt  ImprovedParser.h  data.csv  main.cpp  tuplePrint.h
sound processor/: CMakeLists.txt
sound processor/src/: main.cpp
sound processor/src/executables/: configreader.cpp  converter.cpp  process.cpp
sound processor/src/headers/: WavIstream.h  WavOstream.h  configreader.h  convertFactory.h  converter.h  exeption.h  process.h
word counter/: CMakeLists.txt  main.cpp  test1.cpp  test1.csv  test1.txt  world_counter.cpp  world_counter.h
